assests/style.css
/* @media only screen and (max-width: 300px) {
    .body {

    }

}  */


.body{
    background-color: rgb(63, 122, 248); 
    background-image: linear-gradient(to right, rgb(25, 2, 75) , rgb(82, 162, 253));
}


.innerBackgroundCircle {
  background-color: rgb(24, 2, 66);
  background-image: url("./Floating-Stars-PNG-HD.png");

}

.backgroundCircle {
  background-color: rgb(241, 238, 59);
}

#resumeLinkLogo{
  background-color: azure;
}

#linkedinLinkLogo{
    background-color: azure;
    text-decoration-color: black;
}


#githubLinkLogo{
  background-color: azure;
}

.linkText{
  color: rgb(57, 9, 88);
  font-weight: bold;
}

#pastProjects{
  color: lightskyblue;
}

.projectText{
  color: rgb(210, 183, 247);
}

.thumbnailImage {
  border: 2px solid rgb(6, 49, 128); 
  
}

.thumbnailImage:hover {
  box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
}




/* Phone     * height = w + 180px  */

@media only screen and (max-width: 576px) {

.body {
    height: 780;
    width: 100%;
}

#headshot {
    height: 55px;
    width: 55px;
    border-radius: 50%;
    margin-left: 29px;
    margin-top: .5px;
}


.innerBackgroundCircle {
    height: 100px;
    width: 100px;
    border-radius: 50%;
    margin-left: 25px;
}


.backgroundCircle {
    height: 140px;
    width: 140px;
    border-radius: 50%;
    margin-left: 100px; 
    margin-top: 12px;
}

#resumeLinkLogo{
    height: 20px;
    width: 20px;
    margin-left: 218px;
    margin-right: 10px;
}
 
#linkedinLinkLogo{
    height: 20px;
    width: 20px;
    margin-left: 220px;
    padding-left: 2px;
    margin-right: 10px;
}

#githubLinkLogo{
    height: 20px;
    width: 20px;
    margin-right: 15px;
    margin-left: 223px;
 }

#pastProjects{
    margin-left: 25px;
    text-decoration: underline;
    font-size: 17px;
}

.projectText{
    margin-left: 30px;
    padding-top: 10px;
    font-size: 13px;
}

.thumbnailImage {
    border-radius: 4px; 
    margin-left: 30px; 
    width: 80px;
    height: 60px;
  }
} 

/* End phone screen */


/* add md and xl media queries */


/* Tablet start */

@media only screen and (max-width: 768px) {


#headshot {
    height: 105px;
    width: 105px;
    border-radius: 50%;
    margin-left: 29px;
}


.innerBackgroundCircle {
    height: 165px;
    width: 165px;
    border-radius: 50%;
    margin-left: 25px;
}


.backgroundCircle {
    height: 220px;
    width: 220px;
    border-radius: 50%;
    margin-left: 230px; 
    margin-top: 12px;
}

#resumeLinkLogo{
    height: 40px;
    width: 40px;
    margin-left: 275px;
    margin-right: 10px;
    margin-top: 150px;
}
 
#linkedinLinkLogo{
    height: 40px;
    width: 40px;
    margin-left: 500px;
    padding-left: 2px;
    margin-right: 10px;
}

#githubLinkLogo{
    height: 40px;
    width: 40px;
    margin-right: 15px;
    margin-left: 500px;
 }

#pastProjects{
    margin-left: 55px;
    margin-top: 15px;
    text-decoration: underline;
    font-size: 30px;
}

.projectText{
    margin-left: 68px;
    padding-top: 15px;
    font-size: 20px;
}

.thumbnailImage {
    border-radius: 4px; 
    margin-left: 70px; 
    width: 120px;
    height: 100px;


}
}

/* Tablet end */



/* Computer    start     */

@media only screen and (min-width: 992px) {
    

#headshot {
    height: 115px;
    width: 115px;
    border-radius: 50%;
    margin-left: 24px;
    margin-top: 0.75px;
  }

.innerBackgroundCircle {
    height: 160px;
    width: 160px;
    border-radius: 50%;
    margin-left: 21px;
 }

.backgroundCircle {
    height: 200px;
    width: 200px;
    border-radius: 50%;
    margin-left: 450px; 
    margin-top: 25px;
}

#resumeLinkLogo{
    height: 50px;
    width: 50px;
    margin-left: 895px;
    margin-right: 17px;
}

#linkedinLinkLogo{
    height: 50px;
    width: 50px;
    margin-left: 898px;
    margin-right: 17px;
    padding-left: 5.5px;
}

#githubLinkLogo{
    height: 50px;
    width: 50px;
    margin-left: 900px;
    margin-right: 17px;
}

.linkText {
    font-weight: bold;
    padding-right: 10px;
    font-size: 20px;
}

#pastProjects{
    text-decoration: underline;
    font-size: 35px;
    padding-bottom: 10px;

}

.projectText{
    margin-left: 25px;
    padding-top: 10px;
    font-size: 20px;
}

.thumbnailImage {
    border-radius: 4px; 
    padding: 5px; 
    /* margin-top: 40px;  */
    margin-left: 20px; 
    width: 150px;
  }
}                           

/*end lg screen media query*/

 

